@@ -30,6 +30,26 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -139,6 +159,22 @@ operator|.
 name|common
 operator|.
 name|SolrException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|SolrException
+operator|.
+name|ErrorCode
 import|;
 end_import
 
@@ -1069,11 +1105,52 @@ operator|.
 name|MAX_SHARDS_PER_NODE
 argument_list|)
 decl_stmt|;
-name|ZkNodeProps
-name|m
+if|if
+condition|(
+name|name
+operator|==
+literal|null
+condition|)
+block|{
+name|log
+operator|.
+name|error
+argument_list|(
+literal|"Collection name is required to create a new collection"
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+literal|"Collection name is required to create a new collection"
+argument_list|)
+throw|;
+block|}
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|props
 init|=
 operator|new
-name|ZkNodeProps
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|props
+operator|.
+name|put
 argument_list|(
 name|Overseer
 operator|.
@@ -1082,7 +1159,12 @@ argument_list|,
 name|OverseerCollectionProcessor
 operator|.
 name|CREATECOLLECTION
-argument_list|,
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
 name|OverseerCollectionProcessor
 operator|.
 name|REPLICATION_FACTOR
@@ -1091,26 +1173,63 @@ name|numReplicas
 operator|.
 name|toString
 argument_list|()
-argument_list|,
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
 literal|"name"
 argument_list|,
 name|name
-argument_list|,
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|configName
+operator|!=
+literal|null
+condition|)
+block|{
+name|props
+operator|.
+name|put
+argument_list|(
 literal|"collection.configName"
 argument_list|,
 name|configName
-argument_list|,
+argument_list|)
+expr_stmt|;
+block|}
+name|props
+operator|.
+name|put
+argument_list|(
 name|OverseerCollectionProcessor
 operator|.
 name|NUM_SLICES
 argument_list|,
 name|numShards
-argument_list|,
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
 name|OverseerCollectionProcessor
 operator|.
 name|MAX_SHARDS_PER_NODE
 argument_list|,
 name|maxShardsPerNode
+argument_list|)
+expr_stmt|;
+name|ZkNodeProps
+name|m
+init|=
+operator|new
+name|ZkNodeProps
+argument_list|(
+name|props
 argument_list|)
 decl_stmt|;
 comment|// TODO: what if you want to block until the collection is available?
